# rover

./: .gitignore  .gitmodules  Dockerfile  LICENSE  README.md  build.sh  config.env  docker_build.sh  local_docker_build.sh  requirements.txt
.devcontainer/amd64/: devcontainer.json
.devcontainer/jetson/: devcontainer.json
.devcontainer/windows/: devcontainer.json
.github/workflows/: build-docker.yml  lint-and-format.yml
gstreamer-config/: Dockerfile  docker_build.sh
setup/: README.md  enablecan.sh  firstTimeInstall.sh  reset_usb.service  setup_service.sh  start_rover.service  start_rover.sh  usb_service_setup.sh
src/Arm/arm_srdf/: .setup_assistant  CMakeLists.txt  package.xml
src/Arm/arm_srdf/config/: arm_config.yaml  arm_urdf.ros2_control.xacro  arm_urdf.srdf  arm_urdf.urdf.xacro  initial_positions.yaml  joint_limits.yaml  moveit_controllers.yaml  ros2_controllers.yaml
src/Arm/arm_srdf/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  servo.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  talon.launch.py  test.launch.py  warehouse_db.launch.py
src/Arm/arm_urdf/: setup.py
src/Arm/arm_urdf/launch/: launch.py
src/Arm/arm_urdf/urdf/: arm_urdf.urdf
src/Bringup/: package.xml  setup.py
src/Bringup/launch/: arm.launch.py  arm_tasks.launch.py  basestation.launch.py  basic_drive.launch.py  core.launch.py  drive.launch.py  localization.launch.py  navigation.launch.py  science.launch.py  video_streaming.launch.py
src/Cameras/camera_streaming/: CMakeLists.txt  package.xml
src/Cameras/camera_streaming/config/: webrtc.yaml
src/Cameras/camera_streaming/gst-plugins/: CMakeLists.txt  gstarucomarker.cpp  gstarucomarker.hpp
src/Cameras/camera_streaming/hooks/: gst_env_hook.sh
src/Cameras/camera_streaming/include/camera_streaming/: webrtc_node.h
src/Cameras/camera_streaming/launch/: webRTC.launch.py
src/Cameras/camera_streaming/src/: webrtc_node.cpp
src/Cameras/camera_streaming_qt/: CMakeLists.txt  package.xml
src/Cameras/camera_streaming_qt/include/camera_streaming_qt/: camera_client.h  mainwindow.h
src/Cameras/camera_streaming_qt/include/camera_streaming_qt/tests/: test_camera_node.h
src/Cameras/camera_streaming_qt/include/camera_streaming_qt/widgets/: capture_image_widget.h  main_widget.h  preset_widget.h  source_widget.h
src/Cameras/camera_streaming_qt/src/: camera_client.cpp  mainwindow.cpp
src/Cameras/camera_streaming_qt/src/tests/: test_camera_node.cpp
src/Cameras/camera_streaming_qt/src/widgets/: capture_image_widget.cpp  main_widget.cpp  preset_widget.cpp  source_widget.cpp
src/Cameras/computer_vision/: package.xml  setup.py
src/Cameras/computer_vision/computer_vision/: zed_aruco_detector.py
src/Cameras/computer_vision/launch/: aruco_detector_zed.launch.py
src/HW-Devices/gpio_controller/: package.xml  setup.py
src/HW-Devices/gpio_controller/gpio_controller/: lights.py
src/HW-Devices/hardware/: CMakeLists.txt  package.xml
src/HW-Devices/hardware/include/: TalonSRXWrapper.hpp  rover_arm.hpp
src/HW-Devices/hardware/src/: TalonSRXWrapper.cpp  rover_arm.cpp
src/HW-Devices/ros_phoenix_humble/src/: base_node.cpp  phoenix_bridge.cpp  phoenix_container.cpp  phoenix_manager.cpp  phoenix_nodes.cpp  phoenix_system.cpp
src/HW-Devices/science_sensors/: README.md  package.xml  setup.cfg  setup.py
src/HW-Devices/science_sensors/launch/: can_module_reader.launch.py  gas_sensor.launch.py  gpio.launch.py  panoramic.launch.py  talon.launch.py
src/HW-Devices/science_sensors/science_sensors/: can_module_sensor.py  gas_sensor.py  panoramic.py  (+6 more)
src/HW-Devices/servo_pkg/: README.md  setup.py
src/Nav/cprt_costmap_plugins/: CMakeLists.txt  costmap_plugins.xml  package.xml
src/Nav/cprt_costmap_plugins/include/cprt_costmap_plugins/: gridmap_layer.hpp
src/Nav/cprt_costmap_plugins/src/: gridmap_layer.cpp
src/Nav/cprt_gridmap_filters/: CMakeLists.txt  filter_plugins.xml  package.xml
src/Nav/cprt_gridmap_filters/include/: PreserveCostInflationFilter.hpp
src/Nav/cprt_gridmap_filters/scripts/: calculate_decay_rate.py  visualize_decay_rate.py
src/Nav/cprt_gridmap_filters/src/: PreserveCostInflationFilter.cpp
src/Nav/cprt_planner_plugins/: CMakeLists.txt  global_planner_plugin.xml  package.xml
src/Nav/elevation_mapping/: CMakeLists.txt
src/Nav/gps/: package.xml  setup.py
src/Nav/localization/: package.xml  setup.py
src/Nav/nav_commanders/: package.xml  setup.py
src/Nav/navigation/: CMakeLists.txt  package.xml
src/Telemetry/system-telemetry-cpp/: CMakeLists.txt  package.xml
src/Telemetry/system-telemetry-cpp/include/system-telemetry-cpp/: cpu_collector.hpp  gpu_collector.hpp  memory_collector.hpp  system_telemetry_publisher.hpp  telemetry_collector.hpp
src/Telemetry/system-telemetry-cpp/src/: cpu_collector.cpp  gpu_collector.cpp  memory_collector.cpp  system_telemetry_publisher.cpp
src/Teleop-Control/drive_cpp/: CMakeLists.txt  package.xml  talon_drive_controller_plugin.xml
src/Teleop-Control/drive_cpp/config/: pxn.yaml  talon_drive_common.yaml  talon_drive_unique.yaml  thrustmaster.yaml
src/Teleop-Control/drive_cpp/include/drive_cpp/: TalonDriveController.hpp  WheelControl.hpp
src/Teleop-Control/drive_cpp/launch/: talon.launch.py
src/Teleop-Control/drive_cpp/src/: TalonDriveController.cpp  WheelControl.cpp  main.cpp
src/Teleop-Control/joystick_control/: CMakeLists.txt  package.xml
src/Teleop-Control/joystick_control/include/joystick_control/: ArmDummyMode.hpp  ArmHelpers.hpp  ArmIKMode.hpp  ArmManualMode.hpp  DriveMode.hpp  FlightstickControl.hpp  Mode.hpp  ScienceMode.hpp
src/Teleop-Control/joystick_control/launch/: controller.launch.py
src/Teleop-Control/joystick_control/src/: ArmDummyMode.cpp  ArmHelpers.cpp  ArmIKMode.cpp  ArmManualMode.cpp  DriveMode.cpp  FlightstickControl.cpp  ScienceMode.cpp
src/interfaces/: CMakeLists.txt  package.xml
src/interfaces/msg/: GasSensorReading.msg  SystemTelemetry.msg
src/interfaces/srv/: Cam_Reset.srv  GetCameras.srv  MoveServo.srv  Raman.srv  VideoCapture.srv  VideoOut.srv
(+157 files in other folders)
