<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>cprt_gridmap_filters</name>
  <version>0.0.0</version>
  <description>Custom gridmap filters by the Carleton Planetary Robotics Team</description>
  <maintainer email="erikcaell@gmail.com">Erik Caldwell</maintainer>
  <author email="erikcaell@gmail.com">Erik Caldwell</author>
  <license>Apache-2.0</license>
  <url type="dependant">http://github.com/anybotics/grid_map</url>


  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>grid_map_cmake_helpers</build_depend>

  <depend>filters</depend>
  <depend>grid_map_core</depend>
  <depend>grid_map_msgs</depend>
  <depend>grid_map_ros</depend>
  <depend>pluginlib</depend>
  <depend>tbb</depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <filters plugin="${prefix}/filter_plugins.xml" />
  </export>
</package>
